--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Trello-like App</title>
+  <title>Trello App - Black & Yellow</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Header -->
   <header>
-    <h1>✨ Trello-like App</h1>
+    <h1>⚡ Trello Board</h1>
     <button id="resetBtn" class="btn-reset">Reset Board</button>
   </header>
 
   <!-- Board Area -->
   <main id="board" class="board"></main>
 
-  <!-- JavaScript -->
   <script src="app.js"></script>
 </body>
 </html>
